1 file modified, 1 deleted

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 #background{
-  background-image: url(/pexels-pixabay-45848.jpg);
+  background-image: url("https://images.unsplash.com/photo-1514454529242-9e4677563e7b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fHNreXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
   height: max-content;
   background-position: center;
   background-repeat: no-repeat;
