--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 #background{
   background-image: url("https://images.unsplash.com/photo-1514454529242-9e4677563e7b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fHNreXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
+  /*img url up */
   height: max-content;
   background-position: center;
   background-repeat: no-repeat;
